Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18231

Alt+F4 does not close window when active control is a combobox

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS, Wine
    • None

    Description

      The problem looks similar to CORE-12203 / CORE-17020 where the key combination did not worked when the focus was on a treeview component.

      Steps to reproduce:

      • Start Live CD or install with Boot CD
      • Double-click the clock on the taskbar to open Date/Time properties
      • Once the applet opens, try closing it with Alt+F4
      • Expected: Applet window closes
      • Observed: Window is not being closed, key combination is ignored

      Another way to reproduce is a bit more complex:

      • Open Device Manager
      • Select any available device in the tree and open its properties
      • Select the "Details" tab
      • Try closing the window with Alt+F4, problem will be the same

      I have tested our timedate.cpl on Windows XP, and the problem is not reproduced here, so it means the actual problem must be in our comctl32. There's nothing logged in the debug log while pressing Alt+F4, but I'm attaching it anyway: 0.4.15-dev-4869-g35a816a.txt

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              binarymaster Stas'M
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: