[COMCTL32][USER32] ComboBox: Do default processing on WM_SYSKEYDOWN (#6152)

Based on KRosUser's combo.patch. Enable Alt+F4 on ComboBox.
Do default processing on WM_SYSKEYDOWN if necessary.
CORE-18231